--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
+		"rhumsaa/uuid": "2.8.*@dev",
 		"illuminate/html": "5.0.*"
 	},
 	"require-dev": {
